--- a/public/login.html
+++ b/public/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TAMU Login</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/login-styles.css">
 </head>
 <body>
     <div class="left-panel">
@@ -40,6 +40,6 @@
             </form>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="js/login.js"></script>
 </body>
 </html>
