--- a/public/signup.html
+++ b/public/signup.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>TAMU Study Abroad - Sign Up</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/signup-styles.css">
 </head>
 <body>
     <!-- Top Login Button -->
     <div class="top-login">
-        <button class="top-login-btn" id="loginBtn">Login</button>
+        <button class="top-login-btn" id="loginBtn" onclick="redirectToLogin()">Login</button>
     </div>
-
+    
     <!-- Main Container -->
     <div class="container">
         <!-- Left Side Content -->
@@ -85,6 +85,6 @@
     </div>
 
     <!-- Script -->
-    <script src="./script.js"></script>
+    <script src="js/signup.js"></script>
 </body>
 </html>
