--- a/public/login.html
+++ b/public/login.html
@@ -31,7 +31,7 @@
                         <input type="checkbox" id="remember">
                         Remember me
                     </label>
-                    <a href="#" class="forgot-password">Forgot Password?</a>
+                    <a href="resetpwd.html" class="forgot-password">Forgot Password?</a>
                 </div>
                 <button type="submit" class="login-btn">Login</button>
                 <p class="signup-text">
