Redirection of Admin dashboard to login

--- a/public/admin.html
+++ b/public/admin.html
@@ -54,41 +54,19 @@
             <!-- Current Groups Section -->
             <section class="groups-section">
                 <h2>Current Groups</h2>
-                <div class="cards-scroll-container">
-                    <div class="cards-container current-groups">
-                        <div class="card" data-id="1">
-                            <div class="card-collapse">
-                                <i data-lucide="chevron-left"></i>
-                            </div>
-                            <h3>ISTM 631 Group A</h3>
-                            <div class="card-info">
-                                <p>Members: <span>25</span></p>
-                                <p>Faculty: <span>Dr. Sarah Martinez</span></p>
-                                <p>Last Active: <span>2 hours ago</span></p>
-                            </div>
-                        </div>
-                    </div>
+                <div class="groups-grid current-groups">
+                    <!-- Cards will be populated by JavaScript -->
                 </div>
+                <button class="see-all-btn" data-section="current">See All</button>
             </section>
 
             <!-- Previous Groups Section -->
             <section class="groups-section">
                 <h2>Previous Groups</h2>
-                <div class="cards-scroll-container">
-                    <div class="cards-container previous-groups">
-                        <div class="card" data-id="4">
-                            <div class="card-collapse">
-                                <i data-lucide="chevron-left"></i>
-                            </div>
-                            <h3>ISTM 631 Fall 2023</h3>
-                            <div class="card-info">
-                                <p>Members: <span>25</span></p>
-                                <p>Faculty: <span>Dr. Sarah Martinez</span></p>
-                                <p>Last Active: <span>3 months ago</span></p>
-                            </div>
-                        </div>
-                    </div>
+                <div class="groups-grid previous-groups">
+                    <!-- Cards will be populated by JavaScript -->
                 </div>
+                <button class="see-all-btn" data-section="previous">See All</button>
             </section>
         </main>
 
